[tool.poetry]
name = "projectml"
version = "0.1.0"
description = ""
authors = ["DarioCabas <hz-hertzio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["full"], version = "^0.93.0"}
black = "^23.1.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
